--- a/src/main/resources/static/reset-password.html
+++ b/src/main/resources/static/reset-password.html
@@ -3,15 +3,93 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Réinitialiser le mot de passe</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #e3f2fd, #ffffff);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .container {
+      background: white;
+      padding: 2rem 3rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      max-width: 400px;
+      width: 100%;
+    }
+
+    h2 {
+      margin-bottom: 1.5rem;
+      text-align: center;
+      color: #1565c0;
+    }
+
+    input[type="password"] {
+      width: 100%;
+      padding: 0.75rem 1rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 1rem;
+      transition: border 0.3s ease;
+    }
+
+    input[type="password"]:focus {
+      outline: none;
+      border-color: #1976d2;
+    }
+
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      background-color: #1976d2;
+      color: white;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #1565c0;
+    }
+
+    #message {
+      margin-top: 1rem;
+      text-align: center;
+      font-size: 0.95rem;
+      color: #2e7d32;
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        padding: 1.5rem 2rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <h2>Réinitialiser votre mot de passe</h2>
-  <input type="password" id="newPassword" placeholder="Nouveau mot de passe" />
-  <button onclick="resetPassword()">Réinitialiser</button>
-  <p id="message"></p>
+  <div class="container">
+    <h2>Réinitialiser votre mot de passe</h2>
+    <input type="password" id="newPassword" placeholder="Nouveau mot de passe" />
+    <button onclick="resetPassword()">Réinitialiser</button>
+    <p id="message"></p>
+  </div>
 
   <script>
     function getTokenFromUrl() {
@@ -23,7 +101,7 @@
       const token = getTokenFromUrl();
       const newPassword = document.getElementById("newPassword").value;
 
-      const response = await fetch("http://localhost:8080/auth/reset-password", {
+      const response = await fetch("/auth/reset-password", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ token, newPassword })
@@ -31,6 +109,12 @@
 
       const message = await response.text();
       document.getElementById("message").innerText = message;
+
+      if (response.ok) {
+        document.getElementById("message").style.color = "#2e7d32";
+      } else {
+        document.getElementById("message").style.color = "#d32f2f";
+      }
     }
   </script>
 </body>
