added some extensions

--- a/src/main/resources/static/reset-password.html
+++ b/src/main/resources/static/reset-password.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Réinitialiser le mot de passe</title>
+  <title>Reset password</title>
   <style>
     * {
       box-sizing: border-box;
@@ -85,9 +85,9 @@
 
 <body>
   <div class="container">
-    <h2>Réinitialiser votre mot de passe</h2>
-    <input type="password" id="newPassword" placeholder="Nouveau mot de passe" />
-    <button onclick="resetPassword()">Réinitialiser</button>
+    <h2>Reset your password</h2>
+    <input type="password" id="newPassword" placeholder="New password" />
+    <button onclick="resetPassword()">reset</button>
     <p id="message"></p>
   </div>
 
